# Kyrogram

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: kyrogram.h  network.h  storage.h  theme.h
shaders/: glass.fs
src/: main.c
src/core/: media.c  settings.c
src/network/: proxy_manager.c  tdlib_stub.c  tdlib_wrapper.c
src/security/: storage.c
src/ui/: theme.c
